[gd_scene load_steps=27 format=3 uid="uid://cywlto4wavxy4"]

[ext_resource type="Script" path="res://player/player.gd" id="1_sh6bp"]
[ext_resource type="Texture2D" uid="uid://ddwecisrh30hl" path="res://player/Day_Beginning.png" id="2_05itk"]
[ext_resource type="Script" path="res://player/camera.gd" id="2_v0twu"]
[ext_resource type="PackedScene" uid="uid://bv41uwieducpe" path="res://menus/pause_menu.tscn" id="2_xfury"]
[ext_resource type="Texture2D" uid="uid://bw5731dngws4l" path="res://player/LeftClick.png" id="3_ome4q"]
[ext_resource type="PackedScene" uid="uid://d4gt0koccxrbf" path="res://menus/loading_screen.tscn" id="3_ragej"]
[ext_resource type="FontFile" uid="uid://c2ns0mejwetfy" path="res://font/Nice Sugar.ttf" id="4_c1kuy"]
[ext_resource type="Texture2D" uid="uid://cocvuda1do4l" path="res://player/RightClick.png" id="4_g5s24"]
[ext_resource type="Texture2D" uid="uid://cvlgf7bbdbtje" path="res://player/CrouchButton.png" id="5_diusi"]
[ext_resource type="Texture2D" uid="uid://dk3vylb8u6auq" path="res://player/WASDButtons.png" id="6_mphvj"]
[ext_resource type="Texture2D" uid="uid://dyfd26tkc0a78" path="res://player/ESCButton.png" id="7_j5ety"]
[ext_resource type="Script" path="res://player/fps_label.gd" id="8_ew1g4"]
[ext_resource type="FontFile" uid="uid://dmi7bafb802dp" path="res://font/Starshines.otf" id="9_6f7mi"]
[ext_resource type="Theme" uid="uid://ftmbu43vi6kk" path="res://theme.tres" id="12_lb053"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6w4jn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nm54x"]
radius = 0.113043

[sub_resource type="LabelSettings" id="LabelSettings_3dcpl"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_axio4"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_fdc7j"]
font = ExtResource("4_c1kuy")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_1qkn5"]
font = ExtResource("9_6f7mi")
font_size = 67

[sub_resource type="LabelSettings" id="LabelSettings_uae4q"]
font_size = 32

[sub_resource type="Animation" id="Animation_nd1nm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_w16i2"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x1oyl"]
_data = {
"RESET": SubResource("Animation_nd1nm"),
"fade_out": SubResource("Animation_w16i2")
}

[sub_resource type="Animation" id="Animation_vjo18"]
resource_name = "crouch_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdk8n"]
_data = {
"crouch_animation": SubResource("Animation_vjo18")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_sh6bp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00897205, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_6w4jn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_nm54x")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("2_v0twu")

[node name="Interaction" type="RayCast3D" parent="Camera3D" groups=["hand"]]
target_position = Vector3(0, 0, -3)

[node name="Hand" type="Marker3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.317083, -0.0406094, -0.535736)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -322.0
offset_right = 574.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.5
offset_right = 20.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="CrossHair" type="Label" parent="Control/CenterContainer"]
layout_mode = 2
text = "+"
label_settings = SubResource("LabelSettings_3dcpl")
horizontal_alignment = 1

[node name="CatchMeter" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_right = 2.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("12_lb053")

[node name="DayIcon" type="Sprite2D" parent="Control"]
position = Vector2(88, 61)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_05itk")

[node name="LevelTimerLabel" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.311
anchor_right = 0.07
anchor_bottom = 0.347
offset_left = 18.564
offset_top = -152.839
offset_right = 21.43
offset_bottom = -142.203
text = "300"
label_settings = SubResource("LabelSettings_axio4")
horizontal_alignment = 1

[node name="LeftClick" type="Sprite2D" parent="Control"]
position = Vector2(61, 561)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_ome4q")

[node name="PickUpLabel" type="Label" parent="Control/LeftClick"]
offset_left = -85.0
offset_top = 150.0
offset_right = 87.0
offset_bottom = 217.0
text = "Pick Up/
Use"
label_settings = SubResource("LabelSettings_fdc7j")
horizontal_alignment = 1

[node name="RightClick" type="Sprite2D" parent="Control"]
position = Vector2(132, 561)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_g5s24")

[node name="DropLabel" type="Label" parent="Control/RightClick"]
offset_left = -85.0
offset_top = 150.0
offset_right = 87.0
offset_bottom = 217.0
text = "Drop"
label_settings = SubResource("LabelSettings_fdc7j")
horizontal_alignment = 1

[node name="CrouchButton" type="Sprite2D" parent="Control"]
position = Vector2(201, 561)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_diusi")

[node name="CrouchLabel" type="Label" parent="Control/CrouchButton"]
offset_left = -95.0
offset_top = 150.0
offset_right = 77.0
offset_bottom = 217.0
text = "Crouch
"
label_settings = SubResource("LabelSettings_fdc7j")
horizontal_alignment = 1

[node name="WASDButtons" type="Sprite2D" parent="Control"]
position = Vector2(1059, 561)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_mphvj")

[node name="WASDLabel" type="Label" parent="Control/WASDButtons"]
offset_left = -130.0
offset_top = 145.0
offset_right = 138.0
offset_bottom = 282.0
text = "Move Using 
WASD"
label_settings = SubResource("LabelSettings_fdc7j")
horizontal_alignment = 1

[node name="EscButton" type="Sprite2D" parent="Control"]
position = Vector2(942, 569)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_j5ety")

[node name="EscLabel" type="Label" parent="Control/EscButton"]
offset_left = -130.0
offset_top = 145.0
offset_right = 138.0
offset_bottom = 282.0
text = "Pause
"
label_settings = SubResource("LabelSettings_1qkn5")
horizontal_alignment = 1

[node name="FPSLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("8_ew1g4")

[node name="FadeOverlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_right = 51.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="Control/FadeOverlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -20.0
offset_right = 78.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_lb053")
text = "Time's up!"
label_settings = SubResource("LabelSettings_uae4q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_x1oyl")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hdk8n")
}
speed_scale = 0.5

[node name="LoadingScreen" parent="." instance=ExtResource("3_ragej")]
visible = false

[node name="DayTimer" type="Timer" parent="."]
wait_time = 75.0

[node name="Pause" type="Node2D" parent="."]
visible = false
z_index = 1000

[node name="PauseMenu" parent="Pause" instance=ExtResource("2_xfury")]

[connection signal="police_here" from="." to="." method="_on_police_here"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
